--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,26 @@
 # Site settings
-title: Klise Theme # site title
-description: >- # site description
-  He's writing in Bahasa about web technology and experience as a journal 
-  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
-lang: en-US # default lang
-timezone: Asia/Jakarta # set your timezone
-image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
-repo: https://github.com/piharpi/jekyll-klise # site repo [optional]
+title: Ignacio Tolstoy
+description: >-
+  Blog en castellano sobre aquellos temas que me apasionan o sobre los que estoy aprendiendo.
+lang: es-ES
+timezone: Madrid/Europe
+image: assets/img/ogp.png # TODO: This image used for Open Graph more info https://ogp.me/
+repo: https://github.com/naxhh/blog.tolstoy.eu
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
 author:
-  name: Jekyll Klisé # author name
-  bio: >- # tell to the world
-    The minimalist Jekyll theme, light and dark mode support, for running a personal site and blog, 
-    meet Klisé theme at <a href="https://github.com/piharpi/jekyll-klise" target="_blank" rel="noopener">@github</a>.
-  username: username # general username
-  github: github_username # github username
-  twitter: twitter_username # twitter username
-  facebook: facebook_username # facebook username
-  email: your-email@email.com # email adress
-  avatar: /assets/img/avatar.jpg # change with your own avatar
+  name: Ignacio Tolstoy
+  bio: >-
+    Contenido en castellano de dudosa calidad!
+  username: naxhh
+  github: naxhh
+  twitter: nax_hh
+  email: arkantos798+blog@gmail.com
+  avatar: /assets/img/avatar.jpg # TODO:change with your own avatar
 
 # URL settings
-url: "https://klise.now.sh" #
+url: "https://blog.tolstoy.eu"
 baseurl:
 permalink: /:title/
 google_analytics: # leave it blank if not wish
@@ -72,16 +69,12 @@ include:
   - .htaccess
 
 exclude:
-  - CNAME
   - Gemfile
   - Gemfile.lock
   - LICENSE
   - CHANGELOG.md
   - README.md
   - node_modules
-  - CODE_OF_CONDUCT.md
-  - CONTRIBUTING.md
-  - lighthouse.png
   - klise-*.gem
   - klise.gemspec
 
