--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
   github: naxhh
   twitter: nax_hh
   email: arkantos798+blog@gmail.com
-  avatar: /assets/img/avatar.jpg # TODO:change with your own avatar
+  avatar: /assets/img/motherfoca.jpeg
 
 # URL settings
 url: "https://blog.tolstoy.eu"
